infra/kubernetes/portal-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal-api
  labels:
    app.kubernetes.io/name: portal-api
    azure.workload.identity/use: "true"
